k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-workshop
  labels:
    name: devops-workshop
    workshop: "true"
